--- a/vough_backend/Pipfile
+++ b/vough_backend/Pipfile
@@ -15,6 +15,7 @@ gunicorn = "==20.0.4"
 psycopg2 = "==2.8.6"
 django-heroku = "==0.3.1"
 drf-spectacular = "==0.15.1"
+django-filter = "==2.4.0"
 
 [requires]
 python_version = "3.9"
